fetch data from different workflow trigger

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -116,6 +116,41 @@ jobs:
       tox_args: "-e py38-PyQt5-minimal"
       coverage: true
 
+  coverage_prepare:
+    name: Prepare coverage
+    runs-on: ubuntu-latest
+    needs: [test_coverage, test_minimal]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+          cache-dependency-path: setup.cfg
+          cache: 'pip'
+      - name: Install Dependencies
+        run: |
+          pip install --upgrade pip
+          pip install codecov
+
+      - name: Download coverage data
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage reports
+          path: coverage
+      - name: combine coverage data
+        run: |
+          python -Im coverage combine coverage
+          python -Im coverage xml -o coverage.xml
+          # Report and write to summary.
+          python -Im coverage report --format=markdown --skip-empty --skip-covered >> $GITHUB_STEP_SUMMARY
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage_xml
+          path: coverage.xml
+          retention-days: 5
+
   test_conda:
     name: Test PartSeg conda
     runs-on: ubuntu-20.04
