--- a/setup.cfg
+++ b/setup.cfg
@@ -98,10 +98,10 @@ all =
     PyOpenGL-accelerate>=3.1.5
     PyQt5!=5.15.0,>=5.12.3
 docs =
-    autodoc-pydantic==1.7.2
+    autodoc-pydantic
     sphinx!=3.0.0,!=3.5.0
-    sphinx-autodoc-typehints==1.18.3
-    sphinx-qt-documentation==0.4
+    sphinx-autodoc-typehints
+    sphinx-qt-documentation
 pyinstaller =
     %(all)s
     PyInstaller
