--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -25,7 +25,7 @@ build:
 # Optionally set the version of Python and requirements required to build your docs
 python:
   install:
-    - requirements: requirements/constraints_py3.11.txt
+    - requirements: requirements/constraints_py3.11_docs.txt
     - method: pip
       path: .
       extra_requirements:
