--- a/tox.ini
+++ b/tox.ini
@@ -122,7 +122,7 @@ commands =
 [testenv:docs]
 deps =
     {[testenv]deps}
-    -rrequirements/constraints_py3.9.txt
+    -rrequirements/constraints_py3.11_docs.txt
 allowlist_externals =
     make
     tar
