--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,15 +17,16 @@ sphinx:
 formats: all
 
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
-    python: "3.9"
+    python: "3.11"
 
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
   install:
-    - requirements: requirements/constraints_py3.9.txt
-    - requirements: requirements/requirements_dev.txt
+    - requirements: requirements/constraints_py3.11_docs.txt
     - method: pip
-      path: .[docs]
+      path: .
+      extra_requirements:
+        - docs
