ci: Update `actions/upload-artifact` and  `actions/download-artifact` from 3 to 4 (#1062)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **Chores**
- Updated versions of GitHub Actions for improved artifact handling and
coverage reporting.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       - shell: bash
         run: bash build_utils/download_data.sh
       - name: Upload test data
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test_data
           path: test_data
@@ -102,8 +102,8 @@ jobs:
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       test_data: True
-      python_version: "3.8"
-      tox_args: "-e py38-PyQt5-coverage"
+      python_version: "3.10"
+      tox_args: "-e py310-PyQt5-coverage"
       coverage: true
 
   test_minimal:
@@ -133,10 +133,11 @@ jobs:
           pip install codecov
 
       - name: Download coverage data
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: coverage reports
+          pattern: cov-reports-*
           path: coverage
+          merge-multiple: true
       - name: combine coverage data
         run: |
           python -Im coverage combine coverage
@@ -176,7 +177,7 @@ jobs:
       - uses: tlambert03/setup-qt-libs@v1
 
       - name: Download test data
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: test_data
           path: test_data
@@ -201,7 +202,7 @@ jobs:
         run: bash build_utils/create_environment_yml.sh
 
       - name: Upload environment file
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: environment
           path: environment.yml
