ci: Group actions update (#1065)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

- **Chores**
- Updated Dependabot configuration to group action updates more
efficiently.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
       interval: "weekly"
 
     target-branch: "develop"
+    groups:
+      github-actions:
+        patterns:
+          - "actions/*"
