--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ exclude = '''
 
 [tool.ruff]
 line-length = 120
+exclude = ["examples/call_simple_threshold.py"]
+target-version = "py38"
+fix = true
+
+[tool.ruff.lint]
 select = [
     "F", # Pyflakes
     "E", "W", # pycodestyle
@@ -65,22 +70,19 @@ select = [
 ignore = ["A003", "SIM108", "ARG002", "ARG003", "ARG004", "PLR2004",
     "PLR0913" # should be reenabled in future version
 ]
-exclude = ["examples/call_simple_threshold.py"]
-target-version = "py38"
-fix = true
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party=['PartSeg', 'PartSegData','PartSegCore','PartSegImage', 'PartSegCore_compiled_backend']
 
-[tool.ruff.flake8-tidy-imports]
+[tool.ruff.lint.flake8-tidy-imports]
 # Disallow all relative imports.
 ban-relative-imports = "all"
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 15
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "docs/conf.py" = ["A001"]
 "package/tests/**" = ["ARG", "PLC1901", "S101", "RUF012"]
 "package/PartSegCore/sphinx/*" = ["ARG"]
