--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,11 @@ repos:
       exclude: .*\.md
     - id: debug-statements
     - id: mixed-line-ending
+-   repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v2.5.0
+    hooks:
+    - id: setup-cfg-fmt
+      args: ["--include-version-classifiers", "--max-py-version", "3.11"]
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.2.0
     hooks:
