--- a/tox.ini
+++ b/tox.ini
@@ -65,7 +65,7 @@ extras =
 commands =
     python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
-[testenv:py39-PySide2-conda]
+[testenv:py311-PySide2-conda]
 conda_env=environment.yml
 deps=
     pytest
@@ -111,6 +111,7 @@ deps =
 [testenv:jupyter]
 deps =
     {[testenv]deps}
+    jupyter[all]
     jupyter[all]
     matplotlib
     -crequirements/constraints_py3.9.txt
