improve test of PartSegImage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -228,8 +228,13 @@ parallel = true
 exclude_lines = [
     "pragma: no cover",
     "raise NotImplementedError",
-    "if typing.TYPE_CHECKING",
     "raise RuntimeError()",
+    "pass",
+]
+exclude_also = [
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "if typing.TYPE_CHECKING:",
 ]
 
 [tool.black]
