--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -8,9 +8,12 @@ on:
     branches:
       - master
       - develop
-      - bugfix/fix_pre_tests
   schedule:
     - cron: '0 */12 * * *'  # every 12 hours
+  pull_request:
+    paths:
+      - '.github/workflows/test_prereleases.yml'
+      - 'pyproject.toml'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -47,7 +50,7 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
           cache: 'pip'
-          cache-dependency-path: 'setup.cfg'
+          cache-dependency-path: 'pyproject.toml'
 
       - name: Install Windows OpenGL
         if: runner.os == 'Windows'
@@ -111,7 +114,7 @@ jobs:
         pip install pip-tools
     - name: Compile and install PyInstaller requirements
       run: |
-        pip-compile --upgrade -o requirements.txt setup.cfg --extra pyinstaller  --pre
+        pip-compile --upgrade -o requirements.txt pyproject.toml --extra pyinstaller  --pre
         pip-sync
         pip install .
     - name: upload requirements
