exclude lines intentionally not covered

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -221,6 +221,7 @@ omit = [
     ".tox/*",
     "**/changelog.py",
     "**/version.py",
+    "package/PartSegCore/class_generator.py",
 ]
 parallel = true
 
