--- a/pyproject.toml
+++ b/pyproject.toml
@@ -221,7 +221,7 @@ omit = [
     ".tox/*",
     "**/changelog.py",
     "**/version.py",
-    "PartSegCore/class_generator.py",
+    "**/PartSegCore/class_generator.py",
 ]
 parallel = true
 
