test: Improve test suite for `PartSegCore` (#1077)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Enhanced file input/output capabilities with new methods for better
file extension handling.
	- Improved deprecation warnings for certain outdated functionalities.
- **Bug Fixes**
- Adjusted exception handling in file loading processes to improve error
reporting.
- **Tests**
- Introduced new test functions and assertions to cover a broader range
of scenarios, including file handling and plugin functionalities.
	- Extended testing for algorithm descriptions and error handling.
- **Refactor**
- Removed deprecated file order correction logic to streamline file
handling processes.
- **Chores**
- Updated documentation and comments to reflect changes in exception
handling and deprecation warnings.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -221,6 +221,7 @@ omit = [
     ".tox/*",
     "**/changelog.py",
     "**/version.py",
+    "**/PartSegCore/class_generator.py",
 ]
 parallel = true
 
