add testing pydantic 2

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,6 +59,10 @@ jobs:
           - python_version: "3.9"
             os: "ubuntu-22.04"
             qt_backend: "PyQt6"
+          - python_version: "3.9"
+            os: "ubuntu-22.04"
+            qt_backend: "PyQt5"
+            pydantic: "_pydantic_1"
           - python_version: "3.11"
             os: "ubuntu-22.04"
             qt_backend: "PyQt5"
