--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -83,6 +83,7 @@ jobs:
           PYVISTA_OFF_SCREEN: True  # required for opengl on windows
           NAPARI: latest
           BACKEND: PyQt5
+          PIP_CONSTRAINT: requirements/pre_test_problematic_version.txt
 
       # If something goes wrong, we can open an issue in the repo
       - name: Report Failures
@@ -114,7 +115,7 @@ jobs:
         pip install pip-tools
     - name: Compile and install PyInstaller requirements
       run: |
-        pip-compile --upgrade -o requirements.txt pyproject.toml --extra pyinstaller  --pre
+        pip-compile --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller  --pre
         pip-sync
         pip install .
     - name: upload requirements
