--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -14,6 +14,7 @@ on:
     paths:
       - '.github/workflows/test_prereleases.yml'
       - 'pyproject.toml'
+      - 'requirements/pre_test_problematic_version.txt'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
