--- a/tox.ini
+++ b/tox.ini
@@ -70,13 +70,14 @@ deps=
     pytest
     pytest-json-report
 
-[testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}]
+[testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
 deps =
     {[testenv]deps}
-    414: napari==0.4.14
-    415: napari==0.4.15
-    416: napari==0.4.16
     417: napari==0.4.17
+    417: pydantic<2
+    418: napari==0.4.18
+    418: pydantic<2
+    419: napari==0.4.19.post1
     repo: git+https://github.com/napari/napari.git
 commands =
     !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
