feat: pydantic 2 compatybility (#1084)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **Refactor**
- Improved compatibility with different Pydantic versions by modifying
import strategies and adding new functions.
- **Tests**
- Added tests for new conversion functionalities and dictionary dumping
in `ROIExtractionProfile`.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}
+envlist = py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}
 toxworkdir=/tmp/tox
 
 [gh-actions]
@@ -18,10 +18,9 @@ fail_on_no_env = True
 [gh-actions:env]
 NAPARI =
     latest: all
-    napari414: napari_414
-    napari415: napari_415
-    napari416: napari_416
     napari417: napari_417
+    napari418: napari_417
+    napari419: napari_417
     repo: napari_repo
 BACKEND =
     pyqt: PyQt5
@@ -42,7 +41,6 @@ deps =
     PySide6: PySide6<6.3.2
     PySide2: npe2!=0.2.2
     imageio != 2.22.1
-    pydantic<2.0
     pytest-json-report
 
 [testenv]
@@ -71,13 +69,14 @@ deps=
     pytest
     pytest-json-report
 
-[testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}]
+[testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
 deps =
     {[testenv]deps}
-    414: napari==0.4.14
-    415: napari==0.4.15
-    416: napari==0.4.16
     417: napari==0.4.17
+    417: pydantic<2
+    418: napari==0.4.18
+    418: pydantic<2
+    419: napari==0.4.19.post1
     repo: git+https://github.com/napari/napari.git
 commands =
     !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
