--- a/.github/workflows/base_test_workflow.yml
+++ b/.github/workflows/base_test_workflow.yml
@@ -34,6 +34,10 @@ on:
         required: false
         type: number
         default: 60
+      pydantic:
+        required: false
+        type: string
+        default: ""
 
 
 jobs:
@@ -90,7 +94,7 @@ jobs:
           PYVISTA_OFF_SCREEN: True  # required for opengl on windows
           NAPARI: ${{ inputs.napari }}
           BACKEND: ${{ inputs.qt_backend }}
-          PIP_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}.txt
+          PIP_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
 
       - uses: actions/upload-artifact@v4
         with:
