--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ dependencies = [
     "packaging>=20.0",
     "pandas>=1.1.0",
     "psygnal>=0.3.1",
-    "pydantic>=1.8.1,<2",
+    "pydantic>=1.9.1",
     "pygments>=2.4.0",
     "qtconsole>=4.7.7",
     "requests>=2.18.0",
@@ -112,7 +112,7 @@ pyinstaller = [
     "PyOpenGL-accelerate>=3.1.5",
     "PyQt5!=5.15.0,>=5.12.3",
     "PyInstaller",
-    "pydantic<2",
+    "pydantic",
 ]
 pyqt = [
     "PyQt5!=5.15.0,>=5.12.3",
