--- a/tox.ini
+++ b/tox.ini
@@ -101,7 +101,7 @@ deps =
 commands =
     coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
-[testenv:py{38,39,310}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
+[testenv:py{38,39,310,311}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
     pytest-azurepipelines
     {[testenv]deps}
@@ -110,10 +110,8 @@ deps =
 [testenv:jupyter]
 deps =
     {[testenv]deps}
-    jupyter[all]
-    jupyter[all]
+    jupyter
     matplotlib
-    -crequirements/constraints_py3.9.txt
 setenv =
     DATA_PATH = {toxinidir}/typy_neuronow2
 commands =
