--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ conda_env=environment.yml
 deps=
     pytest
     pytest-json-report
+    lxml_html_clean
 
 [testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
 deps =
