fix minimal test

--- a/tox.ini
+++ b/tox.ini
@@ -99,6 +99,7 @@ setenv =
 deps =
     {[base]deps}
     setuptools_scm[toml]>=3.4
+    lxml_html_clean
 commands =
     coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
