chore: Fix jupyter failing test by using constraints (#1093)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit


- **Chores**
	- Updated the Python version to 3.11 in the CI/CD pipeline.
	- Modified the path for the pip constraints file.
- Introduced a new environment variable `PIP_CONSTRAINT` for specifying
pip constraints.
- Added Python 3.11 support to the test environment configurations in
`tox.ini`.
- Updated the `jupyter` dependency in the `jupyter` test environment
configuration.
- Removed an unnecessary line related to constraints for Python 3.9 in
`tox.ini`.
- Updated the `pygments` dependency version in the project configuration
file.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,16 +97,18 @@ stages:
           DATA_PATH: typy_neuronow2
           pip_cache_dir: $(Pipeline.Workspace)/.pip
         steps:
-          - {task: UsePythonVersion@0, inputs: {versionSpec: '3.9', architecture: x64}}
+          - {task: UsePythonVersion@0, inputs: {versionSpec: '3.11', architecture: x64}}
           - template: .azure-pipelines/pip_cache.yaml
             parameters:
-              key: notebook | requirements/constraints_py3.9.txt | "$(PY)"
+              key: notebook | requirements/constraints_py3.11.txt | "$(PY)"
               path: $(pip_cache_dir)
           - bash: |
               python -m pip install tox
-            displayName: Test notebook
+            displayName: "Install tox"
           - bash: tox -e jupyter
             displayName: "Run Notebook"
+            env:
+              PIP_CONSTRAINT: requirements/constraints_py3.11.txt
 
   - stage: Tests_linux
     dependsOn: [GetTestData, formatting_check]
