--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ conda_env=environment.yml
 deps=
     pytest
     pytest-json-report
+    lxml_html_clean
 
 [testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
 deps =
@@ -98,10 +99,11 @@ setenv =
 deps =
     {[base]deps}
     setuptools_scm[toml]>=3.4
+    lxml_html_clean
 commands =
     coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
-[testenv:py{38,39,310}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
+[testenv:py{38,39,310,311}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
     pytest-azurepipelines
     {[testenv]deps}
@@ -110,10 +112,8 @@ deps =
 [testenv:jupyter]
 deps =
     {[testenv]deps}
-    jupyter[all]
-    jupyter[all]
+    jupyter
     matplotlib
-    -crequirements/constraints_py3.9.txt
 setenv =
     DATA_PATH = {toxinidir}/typy_neuronow2
 commands =
