try cover multiprocessing

--- a/tox.ini
+++ b/tox.ini
@@ -88,7 +88,7 @@ commands =
 deps =
     {[testenv]deps}
 commands =
-    coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    coverage run --concurrency=multiprocessing -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py38-PyQt5-minimal]
 min_req = 1
