ci: Add python 3.12 testing (#1087)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Added support for Python 3.12 in the classifiers section, enhancing
compatibility with newer Python environments.
- **Bug Fixes**
- Improved error handling in batch processing and plugin registration
for stability and robustness.
- **Chores**
- Updated various package dependencies to newer versions, ensuring
improved performance and security.
- **Documentation**
- Updated environment configurations to include Python 3.12, aligning
with the latest development practices.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}
+envlist = py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}
 toxworkdir=/tmp/tox
 
 [gh-actions]
@@ -13,14 +13,15 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 fail_on_no_env = True
 
 [gh-actions:env]
 NAPARI =
     latest: all
     napari417: napari_417
-    napari418: napari_417
-    napari419: napari_417
+    napari418: napari_418
+    napari419: napari_419
     repo: napari_repo
 BACKEND =
     pyqt: PyQt5
@@ -70,7 +71,7 @@ deps=
     pytest-json-report
     lxml_html_clean
 
-[testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
+[testenv:py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
 deps =
     {[testenv]deps}
     417: napari==0.4.17
@@ -83,11 +84,11 @@ commands =
     !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
     repo: python -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
-[testenv:py{38,39,310,311}-PyQt5-coverage]
+[testenv:py{38,39,310,311,312}-PyQt5-coverage]
 deps =
     {[testenv]deps}
 commands =
-    coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    coverage run --concurrency=multiprocessing -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py38-PyQt5-minimal]
 min_req = 1
@@ -103,7 +104,7 @@ deps =
 commands =
     coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
-[testenv:py{38,39,310,311}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
+[testenv:py{38,39,310,311,312}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
     pytest-azurepipelines
     {[testenv]deps}
