exclude pyside2 on python 3.11 and 3.12

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,6 +91,11 @@ jobs:
           - python_version: "3.9"
             os: "ubuntu-22.04"
             qt_backend: "PyQt6"
+        exclude:
+          - python_version: "3.11"
+            qt_backend: "PySide2"
+          - python_version: "3.12"
+            qt_backend: "PySide2"
     with:
       test_data: True
       python_version: ${{ matrix.python_version }}
