--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -72,7 +72,7 @@ jobs:
 
   base-test-main:
     name: Base py${{ matrix.python_version }}
-    if: github.event_name == 'push'
+    # if: github.event_name == 'push'
     uses: ./.github/workflows/base_test_workflow.yml
     needs: download_data
     strategy:
